# background-remover

./: README.md  main.ipynb  requirements.txt
cpp_app/: CMakeLists.txt
cpp_app/include/: image_formats.hpp  virtual_camera.hpp  virtual_output.hpp
cpp_app/src/: main.cpp
trained_models/: unet_q_traced.pt
